@@ -156,12 +156,22 @@
             </dependency>
             <dependency>
                 <groupId>io.aeron</groupId>
+                <artifactId>aeron-agent</artifactId>
+                <version>${aeron.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.aeron</groupId>
                 <artifactId>aeron-driver</artifactId>
                 <version>${aeron.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.aeron</groupId>
-                <artifactId>aeron-all</artifactId>
+                <artifactId>aeron-cluster</artifactId>
+                <version>${aeron.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.aeron</groupId>
+                <artifactId>aeron-client</artifactId>
                 <version>${aeron.version}</version>
             </dependency>
             <dependency>
@@ -595,6 +605,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.1.0</version>
+                    <configuration>
+                        <argLine>-DWORK_ROOT=${WORK_ROOT} --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
